--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection" :  "Data Source=DatingApp.db"
   }
 }
