Adding repository and token validation

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -6,6 +6,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection" :  "Data Source=DatingApp.db"
+    "DefaultConnection": "Data Source=DatingApp.db"
+  },
+  "AppSettings": {
+    "Token" :  "super secret key"
   }
 }
