--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -7,8 +7,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DatingApp.db"
-  },
-  "AppSettings": {
-    "Token" :  "super secret key"
   }
+  //"AppSettings": {
+  //  "Token" :  "super secret key"
+  //}
 }
