Setting up the Global exception handler in the API

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -8,7 +8,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DatingApp.db"
   }
-  //"AppSettings": {
-  //  "Token" :  "super secret key"
-  //}
+  // borrar AppSettings cuando estemos en development mode porque ya lo manejamos con User Secrets
+  ,
+  "AppSettings": {
+    "Token": "super secret key"
+  }
 }
