Configuring Cloudinary and creating the Photos controller part 1

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
   ,
   "AppSettings": {
     "Token": "super secret key"
+  },
+  "CloudinarySettings": {
+    "CloudName": "joseito",
+    "ApiKey": "243337613157213",
+    "ApiSecret": "lTJDuUv35d130D8eDYuk_BL7KBM"
   }
 }
