--- a/DatingApp.SPA/ClientApp/package.json
+++ b/DatingApp.SPA/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^8.2.8",
     "@auth0/angular-jwt": "^3.0.0",
     "alertifyjs": "^1.12.0",
+    "angular-cli": "^1.0.0-beta.28.3",
     "bootstrap": "^4.3.1",
     "bootswatch": "^4.3.1",
     "font-awesome": "^4.7.0",
