Adding sql migration changes and adding Lazy loading for our related entities

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -6,7 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DatingApp.db"
+    "DefaultConnection": "server=.;database=datingapp;trusted_connection=true;"
   }
   // borrar AppSettings cuando estemos en development mode porque ya lo manejamos con User Secrets
   ,
