--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -5,12 +5,12 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:dappjj.database.windows.net,1433;Initial Catalog=datingapp;Persist Security Info=False;User ID=appuser;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  }
   //"ConnectionStrings": {
-  //  "DefaultConnection": "server=.;database=datingapp;trusted_connection=true;"
+  //  "DefaultConnection": "Server=tcp:dappjj.database.windows.net,1433;Initial Catalog=datingapp;Persist Security Info=False;User ID=appuser;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   //}
+  "ConnectionStrings": {
+    "DefaultConnection": "server=.;database=datingapp;trusted_connection=true;"
+  }
   // borrar AppSettings cuando estemos en development mode porque ya lo manejamos con User Secrets
   ,
   "AppSettings": {
